// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Apps/Punch Card App Large Mobile 1`] = `
<div
  className="ms-Stack css-103"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-62"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-63"
    >
      <div
        className="ms-TextField textField-65"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-76"
          >
            <label
              className="ms-Label root-77"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-78"
              data-is-focusable={true}
              id="id__144"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-79"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-66"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel143"
              className="ms-TextField-field field-67"
              id="TextField141"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-65"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-76"
          >
            <label
              className="ms-Label root-77"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-78"
              data-is-focusable={true}
              id="id__151"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-79"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-66"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel150"
              className="ms-TextField-field field-67"
              id="TextField148"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    className="ms-ProgressIndicator root-96"
  >
    <div
      className="ms-ProgressIndicator-itemName itemName-97"
    >
      <span
        className="css-62"
      >
        ⏳Punched
      </span>
    </div>
    <div
      className="ms-ProgressIndicator-itemProgress itemProgress-99"
    >
      <div
        className="ms-ProgressIndicator-progressTrack progressTrack-100"
      />
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={20}
        className="ms-ProgressIndicator-progressBar progressBar-101"
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": "20%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card App Small Mobile 1`] = `
<div
  className="ms-Stack css-103"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-62"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-63"
    >
      <div
        className="ms-TextField textField-65"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-76"
          >
            <label
              className="ms-Label root-77"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-78"
              data-is-focusable={true}
              id="id__130"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-79"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-66"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel129"
              className="ms-TextField-field field-67"
              id="TextField127"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-65"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-76"
          >
            <label
              className="ms-Label root-77"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-78"
              data-is-focusable={true}
              id="id__137"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-79"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-66"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel136"
              className="ms-TextField-field field-67"
              id="TextField134"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    className="ms-ProgressIndicator root-96"
  >
    <div
      className="ms-ProgressIndicator-itemName itemName-97"
    >
      <span
        className="css-62"
      >
        ⏳Punched
      </span>
    </div>
    <div
      className="ms-ProgressIndicator-itemProgress itemProgress-99"
    >
      <div
        className="ms-ProgressIndicator-progressTrack progressTrack-100"
      />
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={20}
        className="ms-ProgressIndicator-progressBar progressBar-101"
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": "20%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card App With Items 1 1`] = `
<div
  className="ms-Stack css-103"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-62"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-63"
    >
      <div
        className="ms-TextField textField-65"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-76"
          >
            <label
              className="ms-Label root-77"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-78"
              data-is-focusable={true}
              id="id__175"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-79"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-66"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel174"
              className="ms-TextField-field field-67"
              id="TextField172"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-65"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-76"
          >
            <label
              className="ms-Label root-77"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-78"
              data-is-focusable={true}
              id="id__182"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-79"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-66"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel181"
              className="ms-TextField-field field-67"
              id="TextField179"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    className="ms-ProgressIndicator root-96"
  >
    <div
      className="ms-ProgressIndicator-itemName itemName-97"
    >
      <span
        className="css-62"
      >
        ⏳Punched
      </span>
    </div>
    <div
      className="ms-ProgressIndicator-itemProgress itemProgress-99"
    >
      <div
        className="ms-ProgressIndicator-progressTrack progressTrack-100"
      />
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={20}
        className="ms-ProgressIndicator-progressBar progressBar-101"
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": "20%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card App With Items 2 1`] = `
<div
  className="ms-Stack css-103"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-62"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-63"
    >
      <div
        className="ms-TextField textField-65"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-76"
          >
            <label
              className="ms-Label root-77"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-78"
              data-is-focusable={true}
              id="id__189"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-79"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-66"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel188"
              className="ms-TextField-field field-67"
              id="TextField186"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-65"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-76"
          >
            <label
              className="ms-Label root-77"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-78"
              data-is-focusable={true}
              id="id__196"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-79"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-66"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel195"
              className="ms-TextField-field field-67"
              id="TextField193"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <button
    className="ms-Button ms-Button--primary root-91"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-79"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-95 ms-Button-icon icon-81"
        data-icon-name="Leave"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons-15\\"",
          }
        }
      >
        
      </i>
      <span
        className="ms-Button-textContainer textContainer-80"
      >
        <span
          className="ms-Button-label label-90"
          id="id__200"
        >
          Punch In
        </span>
      </span>
    </span>
  </button>
  <div
    className="ms-ProgressIndicator root-96"
  >
    <div
      className="ms-ProgressIndicator-itemName itemName-97"
    >
      <span
        className="css-62"
      >
        ⏳Punched
      </span>
    </div>
    <div
      className="ms-ProgressIndicator-itemProgress itemProgress-99"
    >
      <div
        className="ms-ProgressIndicator-progressTrack progressTrack-100"
      />
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={20}
        className="ms-ProgressIndicator-progressBar progressBar-101"
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": "20%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card App Without Items 1`] = `
<div
  className="ms-Stack css-103"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-62"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-63"
    >
      <div
        className="ms-TextField textField-65"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-76"
          >
            <label
              className="ms-Label root-77"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-78"
              data-is-focusable={true}
              id="id__158"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-79"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-66"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel157"
              className="ms-TextField-field field-67"
              id="TextField155"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-65"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-76"
          >
            <label
              className="ms-Label root-77"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-78"
              data-is-focusable={true}
              id="id__165"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-79"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-66"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel164"
              className="ms-TextField-field field-67"
              id="TextField162"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <button
    className="ms-Button ms-Button--primary root-91"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-79"
      data-automationid="splitbuttonprimary"
    >
      <span
        className="ms-Button-textContainer textContainer-80"
      >
        <span
          className="ms-Button-label label-90"
          id="id__169"
        >
          😇Start Your Day
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Apps/Time Tool App 1`] = `
<div>
  <div
    className="ms-Grid"
    dir="ltr"
  >
    <div
      className="ms-Grid-col ms-lg2 ms-xl4"
    />
    <div
      className=" ms-Grid-col ms-sm12 ms-lg8 ms-xl4 ms-depth-16 ms-bgColor-gray10 "
    >
      <div
        className="ms-Stack css-106"
      >
        <span
          className="css-107"
        >
          Time Tool
        </span>
        <span
          className="css-108"
        >
          1. Convert date & time for any timezone into a timestamp.
        </span>
        <div
          className="ms-Stack css-103"
        >
          <div
            className="ms-Stack css-84"
          >
            <div
              className="ms-StackItem css-104"
            >
              <div
                className="ms-DatePicker root-109"
              >
                <div
                  aria-haspopup="true"
                >
                  <div
                    className="ms-TextField textField-113"
                  >
                    <div
                      className="ms-TextField-wrapper"
                    >
                      <label
                        className="ms-Label root-77"
                        htmlFor="DatePicker203-label"
                        id="TextFieldLabel207"
                      >
                        Date
                      </label>
                      <div
                        className="ms-TextField-fieldGroup fieldGroup-66"
                      >
                        <input
                          aria-expanded={false}
                          aria-invalid={false}
                          aria-labelledby="TextFieldLabel207"
                          className="ms-TextField-field field-114"
                          id="DatePicker203-label"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onInput={[Function]}
                          onKeyDown={[Function]}
                          readOnly={true}
                          required={false}
                          role="combobox"
                          type="text"
                          value="Tue Dec 01 2020"
                        />
                        <i
                          aria-hidden={true}
                          className="ms-DatePicker-event--with-label msDatePickerDisabled icon-116"
                          data-icon-name="Calendar"
                          onClick={[Function]}
                        >
                          
                        </i>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-StackItem css-104"
            >
              <div
                className="ms-TextField root-85"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-77"
                    htmlFor="TextField208"
                    id="TextFieldLabel210"
                  >
                    Time
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-66"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel210"
                      className="ms-TextField-field field-114"
                      id="TextField208"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onMouseUp={[Function]}
                      onPaste={[Function]}
                      type="text"
                      value="08:22"
                    />
                    <i
                      aria-hidden={true}
                      className="icon-118"
                      data-icon-name="Clock"
                    >
                      
                    </i>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-Stack css-103"
          >
            <div
              className="ms-StackItem css-104"
            >
              <div
                className="ms-Dropdown-container"
              >
                <label
                  className="ms-Label ms-Dropdown-label root-135"
                  id="Dropdown211-label"
                >
                  Timezone
                </label>
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="Dropdown211-label Dropdown211-option"
                  className="ms-Dropdown dropdown-119"
                  data-is-focusable={true}
                  id="Dropdown211"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  role="listbox"
                  tabIndex={0}
                >
                  <span
                    aria-atomic={true}
                    aria-invalid={false}
                    aria-live="polite"
                    aria-posinset={252}
                    aria-selected={true}
                    aria-setsize={594}
                    className="ms-Dropdown-title title-147"
                    id="Dropdown211-option"
                    role="option"
                  >
                    Asia/Calcutta
                  </span>
                  <span
                    className="ms-Dropdown-caretDownWrapper caretDownWrapper-121"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Dropdown-caretDown caretDown-136"
                      data-icon-name="ChevronDown"
                    >
                      
                    </i>
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-StackItem css-104"
            >
              <div
                className="ms-Checkbox is-enabled root-137"
              >
                <input
                  aria-checked="false"
                  aria-label="Is end of time?"
                  checked={false}
                  className="input-138"
                  id="checkbox-212"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="ms-Checkbox-label label-139"
                  htmlFor="checkbox-212"
                >
                  <div
                    className="ms-Checkbox-checkbox checkbox-140"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Checkbox-checkmark checkmark-143"
                      data-icon-name="CheckMark"
                    >
                      
                    </i>
                  </div>
                  <span
                    aria-hidden="true"
                    className="ms-Checkbox-text text-142"
                  >
                    Is end of time?
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Stack css-144"
        >
          <div
            className="ms-StackItem css-104"
          >
            <div
              className="ms-TextField root-85"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-76"
                >
                  <label
                    className="ms-Label root-77"
                  >
                    Timestamp
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-78"
                    data-is-focusable={true}
                    id="id__216"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-79"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-66"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel215"
                    className="ms-TextField-field field-114"
                    id="TextField213"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    readOnly={true}
                    style={
                      Object {
                        "border": "2px lightgray dashed",
                      }
                    }
                    type="text"
                    value="1606791120000"
                  />
                  <i
                    aria-hidden={true}
                    className="icon-118"
                    data-icon-name="Copy"
                  >
                    
                  </i>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-StackItem css-104"
          >
            <button
              className="ms-Button ms-Button--default root-145"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-79"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                  data-icon-name="Trash"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
                <span
                  className="ms-Button-textContainer textContainer-80"
                >
                  <span
                    className="ms-Button-label label-90"
                    id="id__220"
                  >
                    Clear Local Storage
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          className="ms-StackItem css-104"
        >
          <span
            className="css-108"
          >
            2. Convert a timestamp to date in the time-zone selected above.
          </span>
        </div>
        <div
          className="ms-StackItem css-104"
        >
          <div
            className="ms-TextField root-85"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-Stack css-76"
              >
                <label
                  className="ms-Label root-77"
                >
                  Paste a timestamp
                </label>
                <button
                  className="ms-Button ms-Button--icon root-78"
                  data-is-focusable={true}
                  id="id__226"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  title="Info"
                  type="button"
                >
                  <span
                    className="ms-Button-flexContainer flexContainer-79"
                    data-automationid="splitbuttonprimary"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                      data-icon-name="Info"
                      role="presentation"
                      style={
                        Object {
                          "fontFamily": "\\"FabricMDL2Icons\\"",
                        }
                      }
                    >
                      
                    </i>
                  </span>
                </button>
              </div>
              <div
                className="ms-TextField-fieldGroup fieldGroup-66"
              >
                <input
                  aria-describedby="TextFieldDescription224"
                  aria-invalid={false}
                  className="ms-TextField-field field-67"
                  id="TextField223"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder="Try a timestamp..."
                  type="text"
                  value=""
                />
              </div>
            </div>
            <span
              id="TextFieldDescription224"
            >
              <span
                className="css-146"
              >
                Thu Jan 01 1970 05:30:00 GMT+0530 (Asia/Calcutta)
              </span>
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="ms-Grid-col ms-lg2 ms-xl4"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Custom Label - Variant A Default 1`] = `
<div
  className="ms-Stack css-76"
>
  <label
    className="ms-Label root-77"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-78"
    data-is-focusable={true}
    id="id__234"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-79"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Custom Label Default 1`] = `
<div
  className="ms-Stack css-76"
>
  <label
    className="ms-Label root-77"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-78"
    data-is-focusable={true}
    id="my-callout"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-79"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punch In Button Small Mobile 1`] = `
<button
  className="ms-Button ms-Button--primary root-91"
  data-is-focusable={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <span
    className="ms-Button-flexContainer flexContainer-79"
    data-automationid="splitbuttonprimary"
  >
    <span
      className="ms-Button-textContainer textContainer-80"
    >
      <span
        className="ms-Button-label label-90"
        id="id__72"
      >
        Punch In
      </span>
    </span>
  </span>
</button>
`;

exports[`Storyshots Components/Punch-In-Time-Cell Desktop 1`] = `
<div
  className="ms-TooltipHost root-92"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="ms-TextField root-85"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-66"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-67"
          id="TextField80"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="2020-12-01 08:22"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Punch-In-Time-Cell Small Mobile 1`] = `
<div
  className="ms-TooltipHost root-92"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="ms-TextField root-85"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-66"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-67"
          id="TextField76"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="2020-12-01 08:22"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Punch-Out-Time-Cell Desktop 1`] = `
<div
  className="ms-Stack css-93"
>
  <button
    className="ms-Button ms-Button--primary root-91"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-79"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-95 ms-Button-icon primaryButton0Icon-94 primaryButton0Icon-41"
        data-icon-name="Leave"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons-15\\"",
          }
        }
      >
        
      </i>
      <span
        className="ms-Button-textContainer textContainer-80"
      >
        <span
          className="ms-Button-label label-90"
          id="id__90"
        >
          Punch Out
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punch-Out-Time-Cell Small Mobile With Value 1`] = `
<div
  className="ms-TooltipHost root-92"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="ms-TextField root-85"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-66"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-67"
          id="TextField87"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="2020-12-01 08:22"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Punch-Out-Time-Cell Small Mobile Without Value 1`] = `
<div
  className="ms-Stack css-93"
>
  <button
    className="ms-Button ms-Button--primary root-91"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-79"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-95 ms-Button-icon primaryButton0Icon-94 primaryButton0Icon-41"
        data-icon-name="Leave"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons-15\\"",
          }
        }
      >
        
      </i>
      <span
        className="ms-Button-textContainer textContainer-80"
      >
        <span
          className="ms-Button-label label-90"
          id="id__83"
        >
          Punch Out
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punched Progress Small Mobile 1`] = `
<div
  className="ms-ProgressIndicator root-96"
>
  <div
    className="ms-ProgressIndicator-itemName itemName-97"
  >
    <span
      className="css-62"
    >
      ⏳Punched
    </span>
  </div>
  <div
    className="ms-ProgressIndicator-itemProgress itemProgress-99"
  >
    <div
      className="ms-ProgressIndicator-progressTrack progressTrack-100"
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={10}
      className="ms-ProgressIndicator-progressBar progressBar-101"
      role="progressbar"
      style={
        Object {
          "transition": undefined,
          "width": "10%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Components/Simple Form Default 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-84"
  >
    <div
      className="ms-TextField root-85"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-66"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-67"
            id="TextField238"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      className="ms-Button ms-Button--icon ms-hiddenMdUp root-148"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-79"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      className="ms-Button ms-Button--primary ms-hiddenSm root-91"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-79"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-80"
        >
          <span
            className="ms-Button-label label-90"
            id="id__244"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/Goal For The Day Desktop 1`] = `
<form
  onSubmit={[Function]}
>
  <span
    className="css-62"
  >
    🎯Goal For The Day
  </span>
  <div
    className="ms-Stack css-63"
  >
    <div
      className="ms-TextField textField-65"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-Stack css-76"
        >
          <label
            className="ms-Label root-77"
          >
            Hours
          </label>
          <button
            className="ms-Button ms-Button--icon root-78"
            data-is-focusable={true}
            id="id__25"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Info"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-79"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                data-icon-name="Info"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          className="ms-TextField-fieldGroup fieldGroup-66"
        >
          <input
            aria-invalid={false}
            aria-labelledby="TextFieldLabel24"
            className="ms-TextField-field field-67"
            id="TextField22"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="09"
          />
        </div>
      </div>
    </div>
    <div
      className="ms-TextField textField-65"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-Stack css-76"
        >
          <label
            className="ms-Label root-77"
          >
            Minutes
          </label>
          <button
            className="ms-Button ms-Button--icon root-78"
            data-is-focusable={true}
            id="id__32"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Info"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-79"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                data-icon-name="Info"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          className="ms-TextField-fieldGroup fieldGroup-66"
        >
          <input
            aria-invalid={false}
            aria-labelledby="TextFieldLabel31"
            className="ms-TextField-field field-67"
            id="TextField29"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="00"
          />
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots Forms/Goal For The Day Small Mobile 1`] = `
<form
  onSubmit={[Function]}
>
  <span
    className="css-62"
  >
    🎯Goal For The Day
  </span>
  <div
    className="ms-Stack css-63"
  >
    <div
      className="ms-TextField textField-65"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-Stack css-76"
        >
          <label
            className="ms-Label root-77"
          >
            Hours
          </label>
          <button
            className="ms-Button ms-Button--icon root-78"
            data-is-focusable={true}
            id="id__11"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Info"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-79"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                data-icon-name="Info"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          className="ms-TextField-fieldGroup fieldGroup-66"
        >
          <input
            aria-invalid={false}
            aria-labelledby="TextFieldLabel10"
            className="ms-TextField-field field-67"
            id="TextField8"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="09"
          />
        </div>
      </div>
    </div>
    <div
      className="ms-TextField textField-65"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-Stack css-76"
        >
          <label
            className="ms-Label root-77"
          >
            Minutes
          </label>
          <button
            className="ms-Button ms-Button--icon root-78"
            data-is-focusable={true}
            id="id__18"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Info"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-79"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                data-icon-name="Info"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          className="ms-TextField-fieldGroup fieldGroup-66"
        >
          <input
            aria-invalid={false}
            aria-labelledby="TextFieldLabel17"
            className="ms-TextField-field field-67"
            id="TextField15"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="00"
          />
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots Forms/New Punch Card Form Desktop 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-84"
  >
    <div
      className="ms-TextField root-85"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-66"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-67"
            id="TextField63"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-86"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-79"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-83 ms-Button-icon icon-87"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-89"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-79"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-83 ms-Button-icon icon-87"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-80"
        >
          <span
            className="ms-Button-label label-90"
            id="id__69"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/New Punch Card Form Large Mobile 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-84"
  >
    <div
      className="ms-TextField root-85"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-66"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-67"
            id="TextField45"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-86"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-79"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-83 ms-Button-icon icon-87"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-89"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-79"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-83 ms-Button-icon icon-87"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-80"
        >
          <span
            className="ms-Button-label label-90"
            id="id__51"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/New Punch Card Form Small Mobile 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-84"
  >
    <div
      className="ms-TextField root-85"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-66"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-67"
            id="TextField36"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-86"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-79"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-83 ms-Button-icon icon-87"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-89"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-79"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-83 ms-Button-icon icon-87"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-80"
        >
          <span
            className="ms-Button-label label-90"
            id="id__42"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/New Punch Card Form Tablet 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-84"
  >
    <div
      className="ms-TextField root-85"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-66"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-67"
            id="TextField54"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-86"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-79"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-83 ms-Button-icon icon-87"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-89"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-79"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-83 ms-Button-icon icon-87"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-80"
        >
          <span
            className="ms-Button-label label-90"
            id="id__60"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/Scheduled Slot Form Desktop 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-103"
  >
    <div
      className="ms-StackItem css-104"
    >
      <div
        className="ms-Stack css-63"
      >
        <div
          className="ms-TextField is-required textField-105"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-76"
            >
              <label
                className="ms-Label root-77"
              >
                Start Time *
              </label>
              <button
                className="ms-Button ms-Button--icon root-78"
                data-is-focusable={true}
                id="id__113"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-79"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-66"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel112"
                className="ms-TextField-field field-67"
                id="TextField110"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                required={true}
                type="text"
                value="2020-12-01 09:00"
              />
            </div>
          </div>
        </div>
        <div
          className="ms-TextField is-required textField-105"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-76"
            >
              <label
                className="ms-Label root-77"
              >
                End Time *
              </label>
              <button
                className="ms-Button ms-Button--icon root-78"
                data-is-focusable={true}
                id="id__120"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-79"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-66"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel119"
                className="ms-TextField-field field-67"
                id="TextField117"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                required={true}
                type="text"
                value="2020-12-01 10:00"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      className="ms-Button ms-Button--primary root-91"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-79"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-80"
        >
          <span
            className="ms-Button-label label-90"
            id="id__124"
          >
            Add Slot
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/Scheduled Slot Form Small Mobile 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-103"
  >
    <div
      className="ms-StackItem css-104"
    >
      <div
        className="ms-Stack css-63"
      >
        <div
          className="ms-TextField is-required textField-105"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-76"
            >
              <label
                className="ms-Label root-77"
              >
                Start Time *
              </label>
              <button
                className="ms-Button ms-Button--icon root-78"
                data-is-focusable={true}
                id="id__96"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-79"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-66"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel95"
                className="ms-TextField-field field-67"
                id="TextField93"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                required={true}
                type="text"
                value="2020-12-01 09:00"
              />
            </div>
          </div>
        </div>
        <div
          className="ms-TextField is-required textField-105"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-76"
            >
              <label
                className="ms-Label root-77"
              >
                End Time *
              </label>
              <button
                className="ms-Button ms-Button--icon root-78"
                data-is-focusable={true}
                id="id__103"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-79"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-66"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel102"
                className="ms-TextField-field field-67"
                id="TextField100"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                required={true}
                type="text"
                value="2020-12-01 10:00"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      className="ms-Button ms-Button--primary root-91"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-79"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-83 ms-Button-icon icon-81"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-80"
        >
          <span
            className="ms-Button-label label-90"
            id="id__107"
          >
            Add Slot
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots POCs/Test Pivot Test 1`] = `
<div
  className="ms-Stack css-43"
>
  <div
    aria-label="Basic Pivot Example"
    className="ms-depth-8"
    role="toolbar"
  >
    <div
      className="ms-FocusZone css-51 ms-Pivot root-44"
      data-focuszone-id="FocusZone1"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-52"
        data-content="Convert 2 Timestamp"
        data-is-focusable={true}
        data-order={1}
        data-title="My Files Title"
        id="Pivot0-Tab0"
        name="Convert 2 Timestamp"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-53"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-48"
          >
            <span
              className="ms-Pivot-text text-49"
            >
               
              Convert 2 Timestamp
            </span>
          </span>
        </span>
      </button>
      <button
        aria-selected={false}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-60"
        data-content="Convert 2 Date"
        data-is-focusable={true}
        id="Pivot0-Tab1"
        name="Convert 2 Date"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-53"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-48"
          >
            <span
              className="ms-Pivot-text text-49"
            >
               
              Convert 2 Date
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot0-Tab0"
      className="itemContainer-45"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="ms-Stack css-43"
        >
          <span
            className="css-61"
          >
            Convert 2 Timestamp
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tables/Punched Slots Desktop 1`] = `null`;

exports[`Storyshots Tables/Punched Slots Large Mobile 1`] = `null`;

exports[`Storyshots Tables/Punched Slots Small Mobile 1`] = `null`;

exports[`Storyshots Tables/Punched Slots Template 1`] = `null`;

exports[`Storyshots Tables/Punched Slots With Items 1 1`] = `null`;

exports[`Storyshots Tables/Punched Slots With Items 2 1`] = `null`;

exports[`Storyshots Tables/Punched Slots Without Items 1`] = `null`;
